--- a/.github/workflows/refresh-image-cache.yml
+++ b/.github/workflows/refresh-image-cache.yml
@@ -19,8 +19,10 @@ jobs:
           output: README.md
       - name: Update README.md
         run: |
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
-          git add .
-          git commit -m "Auto-update README.md"
-          git push
+          if [[ "$(git status --porcelain)" != "" ]]; then
+            git config user.name "GitHub Action"
+            git config user.email "action@github.com"
+            git add .
+            git commit -m "Auto-update README.md"
+            git push
+          fi
