fix: update CI/CD

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# inject GITHUB_TOKEN for `secrets.GITHUB_TOKEN`
 GITHUB_TOKEN=
+
+# see probablykasper/readme-template-action@v1
 INPUT_TEMPLATE=TEMPLATE.md
 INPUT_OUTPUT=README.md
