fix: update CI/CD

--- a/.github/workflows/refresh-image-cache.yml
+++ b/.github/workflows/refresh-image-cache.yml
@@ -1,7 +1,7 @@
 name: Refresh Image Cache
 on:
   schedule:
-    - cron: '0 */2 * * *' # every 2 hours
+    - cron: '0 0 * * *' # run a job at exactly 00:00 (midnight) every day
   push:
     branches: [ main ]
 jobs:
